# Friday_Ai

./: .gitignore  CHECK-STATUS.bat  INSTALL-FRIDAY.ps1  LICENSE  STOP-FRIDAY.bat  deploy-netlify.ps1  deploy-netlify.sh  render.yaml  start-friday.bat  vercel.json
api/: index.py  requirements.txt
backend/: config.py  main.py  requirements.txt
backend/api/: __init__.py  alexa_api.py  chat.py  chat_simple.py  chat_v2.py  display_api.py  files.py  gesture_control.py  keyboard_api.py  local_llm_api.py  opencv_gesture_api.py  projects.py  stt_api.py  system.py  tools.py  ultra_gesture_api.py  voice_commands_api.py  windows_api.py
backend/core/: __init__.py  auto_tool_caller.py  chatgpt_context.py  context_resolver.py  context_tracker.py  conversation_rag.py  conversation_store.py  firestore_storage.py  followup_generator.py  health_check.py  history_manager.py  langchain_memory.py  learning_system.py  llm_engine.py  memory.py  model_router.py  reasoning_engine.py  semantic_memory.py  simple_conversation.py  smart_nlp.py  tool_manager.py  tts_engine.py
backend/models/: __init__.py  schemas.py
backend/tools/: __init__.py  advanced_gesture_control.py  advanced_opencv_gesture.py  alexa_features.py  code_executor.py  document_processor.py  file_ops.py  hardware_monitor.py  local_llm.py  media_control.py  os_automation.py  reminders.py  stt_whisper.py  system_control_helper.py  tts_local.py  voice_command_executor.py  (+5 more)
frontend/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
frontend/tauri-app/src-tauri/icons/: icon.icns
frontend/tauri-app/src-tauri/src/: main.rs
(+30 files in other folders)
