[package]
name = "friday-ai-assistant"
version = "2.0.0"
description = "FRIDAY - Female Replacement Intelligent Digital Assistant Youth"
authors = ["Dipesh"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "window-start-dragging", "window-maximize", "window-unmaximize", "window-hide", "window-minimize", "http-all", "window-close", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

